Add lenght validation in palindrome function in js file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="text" name="" id="userInput">
         <input type="button" id="btn" value="Check">
     </form>
-    <p id="sett"></p>
+    <p id="result"></p>
 
 <script src="mathSolutions.js"></script>
 </body>
